--- a/.github/workflows/terraform-platform.yml
+++ b/.github/workflows/terraform-platform.yml
@@ -67,7 +67,7 @@ jobs:
           export ARM_CLIENT_SECRET="${{ secrets.AZURE_AD_CLIENT_SECRET }}"
           export ARM_SUBSCRIPTION_ID="${{ secrets.ARM_SUBSCRIPTION_ID }}"
           export ARM_TENANT_ID="${{ secrets.AZURE_AD_TENANT_ID }}"
-          #terraform init -backend-config="subscription_id=${{ secrets.ARM_SUBSCRIPTION_ID }}" -backend-config="client_id=${{ secrets.AZURE_AD_CLIENT_ID }}" -backend-config="client_secret=${{ secrets.AZURE_AD_CLIENT_SECRET }}" -backend-config="tenant_id=${{ secrets.AZURE_AD_TENANT_ID }}"
+          
           terraform init
           terraform validate
           terraform plan -out tfplan
@@ -82,7 +82,7 @@ jobs:
         working-directory:
         run: |
             docker run \
-            --rm -v /var/run/docker.sock:/var/run/docker.sock -v $HOME:/root/.cache/ ghcr.io/aquasecurity/trivy:latest \
+            --rm -v /var/run/docker.sock:/var/run/docker.sock -v $HOME:/root/.cache/ ghcr.io/aquasecurity/trivy:latest image \
             --severity MEDIUM,HIGH,CRITICAL \
             ${{ env.imageName }}:${{ github.run_number }}
 
