Artifact-type is now required

--- a/.github/workflows/terraform-platform.yml
+++ b/.github/workflows/terraform-platform.yml
@@ -95,7 +95,8 @@ jobs:
 
       - name: Post logs to appinsights
         uses: Azure/publish-security-assessments@v0
-        with: 
+        with:
+          artifact-type: containerImage
           scan-results-path: ${{ steps.container-scan.outputs.scan-report-path }}
           connection-string: ${{ secrets.AZ_APPINSIGHTS_CONNECTION_STRING }}
           subscription-token: ${{ secrets.AZ_SUBSCRIPTION_TOKEN }}
