--- a/.github/workflows/terraform-platform.yml
+++ b/.github/workflows/terraform-platform.yml
@@ -77,6 +77,7 @@ jobs:
         working-directory: ./src/Docker
         run: |
           docker build -t ${{ env.imageName }}:${{ github.run_number }} -f Dockerfile .
+          docker tag "${{ env.imageName }}:${{ github.run_number }}" "jojoacrspark.azurecr.io/jojoacrspark/${{ env.imageName }}:${{ github.run_number }}"
 
       - name: Run trivy scan the docker image
         working-directory:
@@ -84,14 +85,22 @@ jobs:
             docker run \
             --rm -v /var/run/docker.sock:/var/run/docker.sock -v $HOME:/root/.cache/ ghcr.io/aquasecurity/trivy:latest image \
             --severity MEDIUM,HIGH,CRITICAL \
-            ${{ env.imageName }}:${{ github.run_number }}
+            jojoacrspark.azurecr.io/jojoacrspark/${{ env.imageName }}:${{ github.run_number }}
 
       - uses: Azure/container-scan@v0 
         name: Scan image with Defender
         id: container-scan
         continue-on-error: true
         with:
-          image-name: ${{ env.imageName }}:${{ github.run_number }}
+          image-name: jojoacrspark.azurecr.io/jojoacrspark/${{ env.imageName }}:${{ github.run_number }}
+
+      - name: Push Docker image
+        uses: azure/CLI@v1
+        with:
+          inlineScript: |
+            az acr login -n jojoacrspark
+            
+            docker push jojoacrspark.azurecr.io/jojoacrspark/${{ env.imageName }}:${{ github.run_number }}
 
       - name: Post logs to appinsights
         uses: Azure/publish-security-assessments@v0
@@ -100,12 +109,3 @@ jobs:
           scan-results-path: ${{ steps.container-scan.outputs.scan-report-path }}
           connection-string: ${{ secrets.AZ_APPINSIGHTS_CONNECTION_STRING }}
           subscription-token: ${{ secrets.AZ_SUBSCRIPTION_TOKEN }}
-
-      - name: Push Docker image
-        uses: azure/CLI@v1
-        with:
-          inlineScript: |
-            az acr login -n jojoacrspark
-            
-            docker tag "${{ env.imageName }}:${{ github.run_number }}" "jojoacrspark.azurecr.io/jojoacrspark/${{ env.imageName }}:${{ github.run_number }}"
-            docker push jojoacrspark.azurecr.io/jojoacrspark/${{ env.imageName }}:${{ github.run_number }}
