--- a/.github/workflows/terraform-platform.yml
+++ b/.github/workflows/terraform-platform.yml
@@ -108,7 +108,7 @@ jobs:
           creds: ${{ secrets.AZURE_CREDENTIALS }}
 
       - name: ACR TF Deployment
-        if: jobs.check_acr_vulns.steps.tflint-execution-acr.outcome == 'success' && jobs.check_acr_vulns.steps.tfsec-execution-acr.outcome == 'success'
+        if: needs.check_acr_vulns.steps.tflint-execution-acr.outcome == 'success' && needs.check_acr_vulns.steps.tfsec-execution-acr.outcome == 'success'
         working-directory: ./src/Terraform/container-registry
         run: |
           export ARM_CLIENT_ID="${{ secrets.AZURE_AD_CLIENT_ID }}"
@@ -148,7 +148,7 @@ jobs:
           subscription-token: ${{ secrets.AZ_SUBSCRIPTION_TOKEN }}
 
       - name: App Services TF Deployment
-        if: jobs.check_aas_vulns.steps.tflint-execution-aas.outcome == 'success' && jobs.check_aas_vulns.steps.tfsec-execution-aas.outcome == 'success'
+        if: needs.check_aas_vulns.steps.tflint-execution-aas.outcome == 'success' && needs.check_aas_vulns.steps.tfsec-execution-aas.outcome == 'success'
         working-directory: ./src/Terraform/app-services
         run: |
           export ARM_CLIENT_ID="${{ secrets.AZURE_AD_CLIENT_ID }}"
