pr commenter wf updated

--- a/.github/workflows/tf-pr-commenter.yml
+++ b/.github/workflows/tf-pr-commenter.yml
@@ -31,7 +31,7 @@ jobs:
             rm tflint-AzRuleset.zip
             chmod +x tflint-ruleset-azurerm
 
-      - name: tflint
+      - name: tflint acr
         uses: reviewdog/action-tflint@master
         with:
           github_token: ${{ github.token }}
@@ -42,11 +42,31 @@ jobs:
           tflint_rulesets: "azurerm"
           flags: "--module"
 
-      - name: tfsec
+      - name: tflint aas
+        uses: reviewdog/action-tflint@master
+        with:
+          github_token: ${{ github.token }}
+          working_directory: "src/Terraform/app-services"
+          reporter: github-pr-review
+          fail_on_error: "true"
+          tflint_version: "${{ env.tfLintVersion }}"
+          tflint_rulesets: "azurerm"
+          flags: "--module"
+
+      - name: tfsec acr
         uses: tfsec/tfsec-pr-commenter-action@main
         if: always()
         with:
           tfsec_args: --soft-fail
           tfsec_version: ${{ env.tfsecVersion }}
           github_token: ${{ github.token }}
-          working_directory: ./src/Terraform
+          working_directory: ./src/Terraform/container-registry
+
+      - name: tfsec aas
+        uses: tfsec/tfsec-pr-commenter-action@main
+        if: always()
+        with:
+          tfsec_args: --soft-fail
+          tfsec_version: ${{ env.tfsecVersion }}
+          github_token: ${{ github.token }}
+          working_directory: ./src/Terraform/app-services
