--- a/.github/workflows/tf-pr-commenter.yml
+++ b/.github/workflows/tf-pr-commenter.yml
@@ -17,8 +17,8 @@ jobs:
       - name: Clone repo
         uses: actions/checkout@master
 
-      - name: Setup tflint AzureRM plugin
-        working-directory: ${{ github.workspace }}/src/Terraform
+      - name: Setup tflint acr AzureRM plugin
+        working-directory: ${{ github.workspace }}/src/Terraform/container-registry
         run: |
             echo 'plugin "azurerm" {' >.tflint.hcl
             echo '  enabled = true' >>.tflint.hcl
@@ -31,11 +31,36 @@ jobs:
             rm tflint-AzRuleset.zip
             chmod +x tflint-ruleset-azurerm
 
-      - name: tflint
+      - name: tflint acr
         uses: reviewdog/action-tflint@master
         with:
           github_token: ${{ github.token }}
-          working_directory: "src/Terraform"
+          working_directory: "src/Terraform/container-registry"
+          reporter: github-pr-review
+          fail_on_error: "true"
+          tflint_version: "${{ env.tfLintVersion }}"
+          tflint_rulesets: "azurerm"
+          flags: "--module"
+
+      - name: Setup tflint aas AzureRM plugin
+        working-directory: ${{ github.workspace }}/src/Terraform/app-services
+        run: |
+            echo 'plugin "azurerm" {' >.tflint.hcl
+            echo '  enabled = true' >>.tflint.hcl
+            echo '}' >>.tflint.hcl
+            mkdir -p .tflint.d/plugins
+            cd .tflint.d/plugins
+            
+            curl -L "https://github.com/terraform-linters/tflint-ruleset-azurerm/releases/download/${{ env.tfLintAzureRulesVersion }}/tflint-ruleset-azurerm_linux_amd64.zip" -o tflint-AzRuleset.zip
+            unzip tflint-AzRuleset.zip
+            rm tflint-AzRuleset.zip
+            chmod +x tflint-ruleset-azurerm
+
+      - name: tflint aas
+        uses: reviewdog/action-tflint@master
+        with:
+          github_token: ${{ github.token }}
+          working_directory: "src/Terraform/app-services"
           reporter: github-pr-review
           fail_on_error: "true"
           tflint_version: "${{ env.tfLintVersion }}"
