--- a/.github/workflows/terraform-platform.yml
+++ b/.github/workflows/terraform-platform.yml
@@ -11,11 +11,16 @@ on:
         required: true
   workflow_dispatch:
 
+permissions:
+  id-token: write
+  contents: read
+  security-events: write
+
 env:
   tflintRulesExcluded: ""
-  tfLintAzureRulesVersion: v0.14.0
-  tfLintVersion: v0.34.1
-  tfsecVersion: v1.1.5
+  tfLintAzureRulesVersion: v0.23.0
+  tfLintVersion: v0.46.1
+  tfsecVersion: v1.28.1
   imageName: netcoreconf23ml
 
 jobs:
